--- a/HowestMarkRunner/HowestMarkRunner.csproj
+++ b/HowestMarkRunner/HowestMarkRunner.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="bin\x64\Debug\config.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
